force-app/main/default/objects/Travel_Companion__c/Travel_Companion__c.object-meta.xml
<CustomObject>
    <label>Travel Companion</label>
    <nameField>
        <label>Travel Companion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Companions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>