force-app/main/default/objects/Travel_Companion__c/fields/Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Photo_URL__c</fullName>
    <label>Photo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>