force-app/main/default/objects/Travel_Companion__c/fields/Trip_Count__c.field-meta.xml
<CustomField>
    <fullName>Trip_Count__c</fullName>
    <label>Trip Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>